--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=dprzygocka_roll-call
-sonar.organization=testing-dagmara
+sonar.projectKey=CristianOu_roll-call-server
+sonar.organization=cristianou
 
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=.
